bynkc/tests/fixtures/positive/306_route_param_named_deps/src/probe.bynk
context probe

service api from http {
  on GET("/hello/:deps") by v: Visitor (deps: String) -> Effect[HttpResult[String]] {
    Ok(deps)
  }
}
